# gpt_tg_bot

./: Cargo.toml
src/: cli.rs  gpt_client.rs  main.rs  tg_client.rs
src/structs/: gpt.rs  mod.rs  tg.rs
